modules/protocol/http/test/bad-request-ref.txt
debug http: selecting http dissector on flow
debug tcp-connection: opening connection 10.2.96.127:57861 -> 10.2.104.129:80
info alert: id = <>
	severity = low
	description = Parse error at byte 14 : pattern /^(?:[[:blank:]]+)/ doesn't match against `\xaHost: --\xa\xa`
debug tcp-connection: dropping connection 10.2.96.127:57861 -> 10.2.104.129:80
info alert: id = <>
	severity = low
	description = no connection found for tcp packet
	sources = {
		address: 10.2.104.129
		service: tcp/80
	}
	targets = {
		address: 10.2.96.127
		service: tcp/57859
	}
info alert: id = <>
	severity = low
	description = no connection found for tcp packet
	sources = {
		address: 10.2.96.127
		service: tcp/57859
	}
	targets = {
		address: 10.2.104.129
		service: tcp/80
	}
debug tcp-connection: closing connection 10.2.96.127:57861 -> 10.2.104.129:80
